@@ -1,5 +1,9 @@
 2001-08-28  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* win/tkWinDialog.c (ChooseDirectoryHookProc): work-around for MS
+	bug that caused crashing in tk_chooseDirectory on Win95.
+	[Bug #224936] (baker)
+
 	* unix/tkUnixWm.c (TkWmRestackToplevel): reworked how
 	ConfigureNotify requests were handled in relation to the parent to
 	avoid the problem with potential 'raise' delays on some wms.
